--- a/nginx.conf
+++ b/nginx.conf
@@ -18,19 +18,6 @@ http {
     listen ${{PORT}};
     lua_code_cache ${{CODE_CACHE}};
 
-    location / {
-      default_type text/html;
-      content_by_lua_block {
-        require("lapis").serve("app")
-      }
-    }
-
-    location /static/ {
-      alias static/;
-    }
-
-    location /favicon.ico {
-      alias static/favicon.ico;
-    }
+    include usernames.conf;
   }
 }
