--- a/nginx.conf
+++ b/nginx.conf
@@ -14,11 +14,23 @@ http {
     require "lpeg"
   }
 
-
   server {
     listen ${{PORT}};
     lua_code_cache ${{CODE_CACHE}};
 
-    include usernames.conf;
+    location / {
+      default_type text/html;
+      content_by_lua_block {
+        require("lapis").serve("app")
+      }
+    }
+
+    location /static/ {
+      alias static/;
+    }
+
+    location /favicon.ico {
+      alias static/favicon.ico;
+    }
   }
 }
